tests/lean/283.lean.expected.out
283.lean:1:24-1:25: error: Application type mismatch: The argument
  f
has type
  ?m
of sort `Sort ?u` but is expected to have type
  optParam (Sort ?u) t
of sort `Type ?u` in the application
  f f
