tests/lean/283.lean
def f (x := t) : t := f f
